[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Button_Back.png" type="Texture" id=1]
[ext_resource path="res://Resources/PixelText.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Extra Settings.gd" type="Script" id=3]
[ext_resource path="res://Resources/Button_Other_OK.png" type="Texture" id=4]
[ext_resource path="res://Resources/Button_Other_SelectFile.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Backround" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 607.0
color = Color( 0.141176, 0.392157, 0.745098, 1 )

[node name="Back" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 16.0
margin_top = 15.0
margin_right = 64.0
margin_bottom = 62.0
texture_normal = ExtResource( 1 )
expand = true

[node name="Warning" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_top = 31.0
margin_right = 800.0
margin_bottom = 47.0
theme = ExtResource( 2 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "WARNING! Mods can be as dangerous as a .exe file. They are also an experimental feature."
scroll_active = false

[node name="Restart" type="RichTextLabel" parent="."]
visible = false
margin_left = 80.0
margin_top = 143.0
margin_right = 880.0
margin_bottom = 175.0
theme = ExtResource( 2 )
text = "Please restart the game. If you do not restart the game in the next 10 seconds, then the game will stop."
scroll_active = false

[node name="FileSelect" type="FileDialog" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 240.0
margin_top = 111.0
margin_right = 800.0
margin_bottom = 479.0
rect_min_size = Vector2( 150, 52.5 )
theme = ExtResource( 2 )
window_title = "Open a file"
resizable = true
dialog_text = "Choose a mod (.pck, .zip) file."
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( ".pck", ".zip" )
current_dir = "/Users/Ben Webster/Documents/Aurora Gamemaster/Conninternet"
current_file = "C:\\"
current_path = "/Users/Ben Webster/Documents/Aurora Gamemaster/Conninternet/C:\\"

[node name="Path" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 80.0
margin_top = 255.0
margin_right = 784.0
margin_bottom = 303.0
theme = ExtResource( 2 )
placeholder_text = "Enter Modfile Path Here"

[node name="OK" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 832.0
margin_top = 255.0
margin_right = 880.0
margin_bottom = 303.0
texture_normal = ExtResource( 4 )
expand = true

[node name="FileSelectButton" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 784.0
margin_top = 255.0
margin_right = 832.0
margin_bottom = 303.0
texture_normal = ExtResource( 5 )
expand = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Tweens" type="Node" parent="."]

[node name="BackButtonTween" type="Tween" parent="Tweens"]

[node name="WarningTextTween" type="Tween" parent="Tweens"]

[node name="PathTextTween" type="Tween" parent="Tweens"]

[node name="FileSelectTween" type="Tween" parent="Tweens"]

[node name="OKButtonTween" type="Tween" parent="Tweens"]

[node name="Wait" type="Timer" parent="."]
wait_time = 2.0

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="file_selected" from="FileSelect" to="." method="_on_FileSelect_file_selected"]
[connection signal="pressed" from="OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="FileSelectButton" to="." method="_on_FileSelectButton_pressed"]
